--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "cloudinary": "^2.0.3",
     "cloudinary-core": "^2.13.0",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
